tests/error/modifier_errors/higher_order_flag_mismatch1.err
Error: Unitary flag mismatch (at $FILE:15:15)
   | 
13 | @guppy
14 | def test(q: qubit) -> None:
15 |     apply_ctrl(dagger_only, q)
   |                ^^^^^^^^^^^ Expected function with unitary flags: `control=True`, got:
   |                            `dagger=True`

Guppy compilation failed due to 1 previous error
